# syriantaxes

./: .coverage  README.md  pyproject.toml
src/syriantaxes/: __init__.py  bracket.py  cast.py  rounder.py  ss.py  taxes.py  types.py
tests/: test_bracket.py  test_cast.py  test_rounder.py  test_ss.py
tests/test_taxes/: conftest.py
tests/test_taxes/test_with_external_classes/: conftest.py  test_taxes_2.py
tests/test_taxes/test_with_internal_classes/: conftest.py  test_taxes.py
tests/test_with_internal_classes/: conftest.py  test_taxes.py
